--- a/Ch04 Basic Analysis.ipynb
+++ b/Ch04 Basic Analysis.ipynb
@@ -2782,7 +2782,10 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -2810,7 +2813,10 @@
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -3157,7 +3163,10 @@
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -3183,7 +3192,10 @@
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -3459,9 +3471,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
